--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,3 @@
-.hide {
-  display: none;
-}
-
-
 /* #region Base styles */
 :root {
   --iris: #4d5ae5;
@@ -23,12 +18,11 @@
 
 body {
   font-family: Roboto, sans-serif;
-  color: #434455;
-  background: #ffffff;
+  color: var(--navy-blue);
+  background: var(--white);
 }
 
 .section-title {
-  color: #2e2f42;
   font-weight: 700;
   text-align: center;
   margin: 0 auto;
@@ -39,7 +33,16 @@ h2 {
   font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.02em;
-  text-transform: capitalize;
+  text-transform: capitalize
+}
+
+@media only screen and (min-width: 1158px) {
+  h2 {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+  }
 }
 
 h3 {
@@ -48,6 +51,7 @@ h3 {
   line-height: 1.2;
   letter-spacing: 0.02em;
 }
+
 
 p {
   color: var(--slate);
@@ -72,6 +76,7 @@ a {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  border: none;
 }
 
 a:hover,
@@ -102,7 +107,6 @@ a:focus {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-
 
 section {
   padding: 96px 0;
@@ -163,25 +167,52 @@ image {
 
 .header-container {
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
+  padding: 0;
   gap: 24px;
 }
 
-.header-nav {
-  display: flex;
-  align-items: center;
+@media only screen and (min-width: 767px) {
+  .header-container {
+
+    padding: 16px 16px 0 16px;
+  }
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (min-width: 767px) {
+  .header-container {
+    justify-content: space-between;
+    padding: 24px 24px 0 24px;
+  }
+}
+
+
+@media only screen and (min-width: 767px) {
   .header-nav {
-    padding: 16px 0;
+    display: flex;
+    align-items: center;
   }
 }
 
 .logo-link-header {
-  padding: 24px 0;
-  margin-right: 76px;
+  padding: 16px;
+}
+
+@media only screen and (min-width: 768px) {
+  .logo-link-header {
+    padding: 0;
+    margin-right: 76px;
+    padding-top: 8px;
+    padding-bottom: 24px;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .logo-link-header {
+    padding:  0 0 24px 0;
+    margin-right: 76px;
+  }
 }
 
 .logo-header {
@@ -194,33 +225,55 @@ image {
   }
 }
 
+.header-address {
+  margin: 0;
+}
+
 .header-nav-list,
 .header-address-list {
-  display: flex;
-  flex-direction: row;
-  gap: 40px;
-  list-style: none;
+  display: none;
 }
 
 @media screen and (min-width: 768px) {
-  .header-adress-list {
+  .header-nav-list {
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+    list-style: none;
+  }
+}  
+
+@media screen and (min-width: 768px) {
+  .header-address-list {
+    display: flex;
     flex-direction: column;
-    gap: 12px;
+    list-style: none;
   }
 }
 
-.header-address {
-  display: flex;
-  align-items: center;
+@media screen and (min-width: 1158px) {
+  .header-nav-list,
+  .header-address-list {
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+    list-style: none;
+  }
 }
 
 .header-nav-link {
   position: relative;
-  display: inline-block;
-  padding: 24px 0;
+  display: inline-block;padding-top: 8px;
+  padding-bottom: 24px;
   font-weight: 500;
   line-height: 1.5;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 1158px) {
+  .header-nav-link {
+    padding:  0 0 24px 0;
+  }
 }
 
 .active {
@@ -239,15 +292,24 @@ image {
   background-color: var(--ocean);
 }
 
-.header-address-link {
-  display: inline-block;
-  padding: 24px 0;
-  color: var(--slate);
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 1.17;
-  letter-spacing: 0.04em;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+@media screen and (min-width: 768px) {
+  .header-address-link {
+    display: block;
+    padding-bottom: 12px;
+    margin: 0;
+    color: var(--slate);
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .header-address-link {
+    padding:  0 0 24px 0;
+  }
 }
 
 .header-adress-link:hover,
@@ -264,14 +326,7 @@ image {
 }
 
 .header-burger-btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 24px;
-  height: 24px;
-  color: var(--cl-navy-blue);
-  background-color: transparent;
-  transition: color var(--transition-hover-focus);
+
 }
 
 .header-burger-btn:hover,
@@ -310,9 +365,11 @@ image {
     flex-direction: column;
     gap: 48px;
     align-items: center;
+    padding: 72px 0;
   }
 }
-v .hero {
+
+.hero {
   max-width: 320px;
   background: var(--navy-blue);
   padding: 72px 0;
@@ -352,15 +409,15 @@ v .hero {
   .hero {
     max-width: 1440px;
     padding: 188px 0;
-    background-image: linear-gradient(to bottom, var(--grey), var(--grey)),
-      url(../images/hero/people-office-desk@1x.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+                      url(../images/hero/people-office-desk@1x.jpg);
   }
 }
 
 @media only screen and (min-width: 1158px) and (min-resolution: 192dpi) {
   .hero {
-    background-image: linear-gradient(to bottom, var(--grey), var(--grey)),
-      url(../images/hero/people-office-desk@2x.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+                      url(../images/hero/people-office-desk@1x.jpg);
   }
 }
 
@@ -411,12 +468,13 @@ v .hero {
 .principles-section {
   padding-top: 120px;
   padding-bottom: 120px;
+  text-align: center;
 }
 
 .section-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   gap: 72px;
 }
 
@@ -435,7 +493,6 @@ v .hero {
 }
 
 .section-list-item {
-  width: calc((100% - 72px) / 1);
   display: flex;
   flex-direction: column;
 }
@@ -471,6 +528,11 @@ v .hero {
 }
 
 .section-list-item h3 {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1,11;
+  text-align: center;
+  letter-spacing: 0.02em;
   margin-bottom: 8px;
 }
 
@@ -485,16 +547,18 @@ v .hero {
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2;
+    letter-spacing: 0.02em;
   }
 }
 
 @media screen and (max-width: 1157px) {
   .section-list-item-text {
     font-weight: 500;
+    text-align: center;
   }
 }
 
-.principles-section .section-title {
+.section-list-item-text {
   text-align: left;
 }
 /* #endregion */
@@ -504,9 +568,6 @@ v .hero {
   background: var(--cloud);
   padding-top: 120px;
   padding-bottom: 120px;
-}
-
-.team-container {
 }
 
 .team-list {
@@ -534,20 +595,17 @@ v .hero {
   }
 }
 
-
 .team-section h2 {
   text-align: center;
   margin-bottom: 72px;
 }
-
 
 .team-list-item {
   display: flex;
   flex-direction: column;
   background: var(--white);
   border-radius: 0px 0px 4px 4px;
-  box-shadow: 0px 2px 1px 0px #2e2f4214, 
-    0px 1px 1px 0px #2e2f4229,
+  box-shadow: 0px 2px 1px 0px #2e2f4214, 0px 1px 1px 0px #2e2f4229,
     0px 1px 6px 0px #2e2f4214;
 }
 
@@ -562,7 +620,6 @@ v .hero {
     width: calc((100% - 72px) / 4);
   }
 }
-
 
 .team-list-item img {
   display: block;
@@ -634,8 +691,6 @@ v .hero {
   margin-bottom: 72px;
 }
 
-
-
 .portfolio-list {
   display: flex;
   flex-direction: column;
@@ -668,11 +723,9 @@ v .hero {
   }
 }
 
-
 .portfolio-list-item {
   cursor: pointer;
-  box-shadow: 0px 2px 1px 0px #2e2f4214, 
-    0px 1px 1px 0px #2e2f4229,
+  box-shadow: 0px 2px 1px 0px #2e2f4214, 0px 1px 1px 0px #2e2f4229,
     0px 1px 6px 0px #2e2f4214;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow var(--transition-hover-focus);
@@ -689,7 +742,6 @@ v .hero {
     width: calc((100% - 48px) / 3);
   }
 }
-
 
 .portfolio-list-item img {
   display: block;
@@ -737,12 +789,11 @@ v .hero {
 
 .section-footer {
   background-color: var(--navy-blue);
-  padding: 100px 0;
 }
 
 .footer-container {
   background-color: var(--navy-blue);
-  padding: 100px 0;
+  padding: 96px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -760,7 +811,7 @@ v .hero {
 
 @media only screen and (min-width: 768px) and (max-width: 1157px) {
   .footer-container {
-    padding: 0 108px;
+    padding: 96px 108px;
   }
 }
 
@@ -778,6 +829,8 @@ v .hero {
   align-items: center;
 }
 
+
+
 @media only screen and (min-width: 1158px) {
   .footer-container-logo {
     margin-right: 120px;
@@ -790,11 +843,13 @@ v .hero {
   }
 }
 .logo-footer {
+  max-width: 288px;
   color: var(--cloud);
 }
 
 .footer-text {
   color: var(--cloud);
+  width: 264px;
 }
 
 @media only screen and (min-width: 1158px) {
@@ -805,10 +860,6 @@ v .hero {
 
 .footer-social {
   max-width: 208px;
-  margin-right: 80px;
-}
-
-.footer-social {
   align-items: center;
 }
 
@@ -821,6 +872,13 @@ v .hero {
 .social-text {
   font-weight: 500;
   color: var(--white);
+  text-align: center;
+}
+
+@media only screen and (min-width: 768px) {
+  .social-text {
+    text-align: left;
+  }
 }
 
 @media only screen and (min-width: 768px) {
@@ -893,13 +951,6 @@ v .hero {
   }
 }
 
-@media screen and (min-width: 1158px) {
-  .footer-form {
-    gap: 24px;
-  }
-}
-
-
 .subscribe-input {
   font-family: "Roboto";
   color: #ffffff;
@@ -915,14 +966,14 @@ v .hero {
   justify-content: center;
   width: 264px;
   height: 40px;
-  border: 1px solid white;
+  border: 1px solid var(--white);
   background-color: transparent;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
 
 .footer-subscribe-input::placeholder {
-  color: #ffffff;
+  color: var(--white);
   opacity: 0;
 }
 
@@ -930,9 +981,8 @@ v .hero {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #ffffff;
-  background: #4d5ae5;
-  padding: 0 16px;
+  color: var(--white);
+  background: var(--iris);
   border: none;
   border-radius: 0px 4px 4px 0px;
   cursor: pointer;
@@ -947,21 +997,21 @@ v .hero {
 
 .telegram {
   display: block;
-  fill: white;
+  fill: var(--white);
   margin-left: 16px;
 }
 /* #endregion */
 
 /* #region Mobile menu */
 .mobile-menu {
-  background-color: var(--cl-white);
+  background-color: var(--white);
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   z-index: 999;
-  opacity: 0;
+  /* opacity: 0; */
   transition: opacity var(--transition-hover-focus),
     visibility var(--transition-hover-focus);
 }
@@ -977,12 +1027,22 @@ v .hero {
 }
 
 .mobile-menu-container {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
+  align-items: flex-start; */
   height: 100%;
   position: relative;
   padding: 72px 16px 40px;
+}
+
+.mobile-menu-container .mobile-close-btn {
+  background-color: var(--white);
+  margin-bottom: 24px;
+}
+
+.mobile-menu-nav {
+  margin-bottom: 168px;
 }
 
 .mobile-menu-list {
@@ -996,23 +1056,19 @@ v .hero {
   font-weight: 700;
   line-height: 1.11;
   letter-spacing: 0.02em;
-  color: var(--cl-navy-blue);
+  color: var(--navy-blue);
 }
 
 .mobile-menu-link.active {
-  color: var(--cl-ocean);
+  color: var(--ocean);
 }
 
-.mobile-menu-contacts {
-  display: flex;
-  flex-direction: column;
-  gap: 48px;
+.mobile-menu-adress {
+  margin-bottom: 48px;
 }
 
-.mobile-menu-adress-list {
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
+.mobile-menu-tel {
+  margin-bottom: 24px;
 }
 
 .mobile-menu-adress-link {
@@ -1020,13 +1076,13 @@ v .hero {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: rgb(var(--cl-slate));
+  color: var(--slate);
   transition: color var(--transition-hover-focus);
 }
 
 .mobile-menu-adress-link:hover,
 .mobile-menu-adress-link:focus {
-  color: var(--cl-iris);
+  color: var(--iris);
 }
 /* #endregion */
 
@@ -1074,11 +1130,6 @@ v .hero {
     width: 408px;
     min-height: 584px;
     padding: 72px 24px 24px;
-  }
-}
-
-@media screen and (min-width: 1158px) {
-  .modal {
   }
 }
 
@@ -1207,7 +1258,7 @@ v .hero {
 }
 
 .standard-checkbox:checked + .custom-checkbox .custom-checkbox-box {
-  background-color: rgb(var(--cl-ocean));
+  background-color: rgb(var(--ocean));
   border: none;
   fill: var(--cloud);
 }
@@ -1230,7 +1281,6 @@ v .hero {
 
 .custom-checkbox-box {
   flex-shrink: 0;
-
   display: inline-flex;
   justify-content: center;
   align-items: center;
